bk_ida/gccida/c1/build_complex_type
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/build_complex_type/src/tree.c:4528:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v5; // r14 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/build_complex_type/src/tree.c:4552:22: error: use of undeclared identifier 'unk_6DF04A'
v6 = ( const char *)&unk_6DF04A; 
                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/build_complex_type/src/tree.c:4556:22: error: use of undeclared identifier 'unk_6DF05E'
v6 = ( const char *)&unk_6DF05E; 
                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/build_complex_type/src/tree.c:4560:22: error: use of undeclared identifier 'unk_6DF074'
v6 = ( const char *)&unk_6DF074; 
                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/build_complex_type/src/tree.c:4564:22: error: use of undeclared identifier 'unk_6DF086'
v6 = ( const char *)&unk_6DF086; 
                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/build_complex_type/src/tree.c:4589:22: error: use of undeclared identifier 'unk_6DF0F7'
v6 = ( const char *)&unk_6DF0F7; 
                     ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/build_complex_type/src/obj/tree.o] Error 1
